--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,21 @@
 {
   "name": "firebase-passport",
-  "version": "0.0.0",
+  "version": "0.0.0-70",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.4.3",
+    "cookie-parser": "^1.3.2",
+    "express": "^4.5.1",
+    "express-session": "^1.6.4",
+    "firebase": "^1.0.17",
     "firebase-token-generator": "~0.1.4",
     "passport": "~0.1.18",
-    "passport-foursquare": "~0.1.3"
+    "passport-foursquare": "^1.0.0",
+    "passport-github": "^0.1.5",
+    "passport-linkedin": "^0.1.3",
+    "passport-reddit": "^0.2.4",
+    "passport-trello": "^0.1.4"
   },
   "devDependencies": {
     "firebase-token-generator": "~0.1.4",
