--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
   "name": "firebase-passport-login",
-  "version": "0.1.0",
-  "description": "Use Express Passport libraries with Firebase",
+  "version": "0.0.0-70",
+  "description": "",
   "main": "server/server.js",
-  "directories": {
-    "example": "examples"
+  "dependencies": {
+    "body-parser": "^1.4.3",
+    "cookie-parser": "^1.3.2",
+    "express": "^4.5.1",
+    "express-session": "^1.6.4",
+    "firebase": "^1.0.17",
+    "firebase-token-generator": "~0.1.4",
+    "passport": "~0.1.18",
+    "passport-foursquare": "^1.0.0",
+    "passport-github": "^0.1.5",
+    "passport-linkedin": "^0.1.3",
+    "passport-reddit": "^0.2.4",
+    "passport-trello": "^0.1.4"
+  },
+  "devDependencies": {
+    "firebase-token-generator": "~0.1.4",
+    "passport": "~0.1.18",
+    "passport-foursquare": "~0.1.3",
+    "express": "~3.4.8",
+    "passport-reddit": "~0.2.4",
+    "crypto": "0.0.3",
+    "firebase": "~1.0.2",
+    "underscore": "~1.5.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:Rigidflame/firebase-passport-login.git"
-  },
-  "keywords": [
-    "firebase",
-    "passport",
-    "express"
-  ],
-  "author": "Abraham Haskins <abe@rigidflame.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Rigidflame/firebase-passport-login/issues"
-  },
-  "dependencies": {
-    "firebase-token-generator": "~0.1.4",
-    "passport": "~0.2.0",
-    "firebase": "~1.0.11",
-    "express": "~4.0.0"
-  }
+  "author": "",
+  "license": "BSD"
 }
