give the package a better structure

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "firebase-passport-login",
   "version": "0.0.0-70",
   "description": "",
-  "main": "server/server.js",
+  "main": "index.js",
   "dependencies": {
     "body-parser": "^1.4.3",
     "cookie-parser": "^1.3.2",
