--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "passport-github": "^0.1.5",
     "passport-linkedin": "^0.1.3",
     "passport-reddit": "^0.2.4",
-    "passport-trello": "^0.1.4"
+    "passport-trello": "^0.1.4",
+    "passport-stack": "git://github.com/jessta/passport-stack.git"
   },
   "devDependencies": {
     "firebase-token-generator": "~0.1.4",
