--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "firebase-passport-login",
   "version": "0.1.0",
   "description": "Use Express Passport libraries with Firebase",
-  "main": "server/server.js",
+  "main": "server/router.js",
   "directories": {
     "example": "examples"
   },
@@ -24,9 +24,13 @@
     "url": "https://github.com/Rigidflame/firebase-passport-login/issues"
   },
   "dependencies": {
-    "firebase-token-generator": "~0.1.4",
-    "passport": "~0.2.0",
-    "firebase": "~1.0.11",
-    "express": "~4.0.0"
+    "express": "~4.0.0",
+    "firebase": "~2.2.4",
+    "firebase-token-generator": "~2.0.0",
+    "passport": "~0.2.1",
+    "rsvp": "^3.0.18"
+  },
+  "devDependencies": {
+    "path": "^0.11.14"
   }
 }
