--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "cookie-parser": "^1.3.4",
     "firebase-token-generator": "~2.0.0",
     "lodash": "^3.7.0",
     "passport": "~0.2.1",
