--- a/package.json
+++ b/package.json
@@ -24,13 +24,21 @@
     "url": "https://github.com/Rigidflame/firebase-passport-login/issues"
   },
   "dependencies": {
+    "cookie-parser": "^1.3.4",
+    "crypto": "0.0.3",
     "express": "~4.0.0",
     "firebase": "~2.2.4",
     "firebase-token-generator": "~2.0.0",
+    "lodash": "^3.7.0",
     "passport": "~0.2.1",
-    "rsvp": "^3.0.18"
+    "passport-foursquare": "~0.1.3",
+    "passport-foursquare": "~0.1.3",
+    "passport-reddit": "~0.2.4",
+    "passport-facebook": "^2.0.0",
+    "path": "^0.11.14",
+    "rsvp": "^3.0.18",
+    "underscore": "~1.5.2"
   },
   "devDependencies": {
-    "path": "^0.11.14"
   }
 }
