--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "url": "https://github.com/Rigidflame/firebase-passport-login/issues"
   },
   "dependencies": {
+    "body-parser": "^1.12.3",
     "cookie-parser": "^1.3.4",
     "crypto": "0.0.3",
     "express": "~4.0.0",
