--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport": "~0.2.1",
     "passport-facebook": "^2.0.0",
     "passport-foursquare": "~0.1.3",
+    "passport-google-oauth": "^0.2.0",
     "passport-reddit": "~0.2.4",
     "path": "^0.11.14",
     "rsvp": "^3.0.18",
