--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport-foursquare": "~0.1.3",
     "passport-google-oauth": "^0.2.0",
     "passport-reddit": "~0.2.4",
+    "passport-twitter": "^1.0.3",
     "path": "^0.11.14",
     "rsvp": "^3.0.18",
     "underscore": "~1.5.2"
