--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "body-parser": "^1.12.3",
+    "commander": "^2.8.1",
     "cookie-parser": "^1.3.4",
     "crypto": "0.0.3",
     "express": "~4.0.0",
