Improvements to support auth within Facebook mobile
commit bd8e44dc0d0ce81fd24bb81036c0d3c2cc568836
Author: Nathan Hadfield <hadfieldn@gmail.com>
Date:   Sat May 2 22:33:46 2015 -0600

    Change arg ordering for FirebasePassportLogin

    to make callback function last

commit 9d81f51269f1ee9d33661249dba4b8049a710377
Author: Nathan Hadfield <hadfieldn@gmail.com>
Date:   Sat May 2 22:22:56 2015 -0600

    Fix case of firebaseURL query param

commit 0b567af127a34f25d01e1a07d556c52f5bd65727
Author: Nathan Hadfield <hadfieldn@gmail.com>
Date:   Sat May 2 21:10:19 2015 -0600

    Add support for dev mode

    which allows specifying the Firebase URL to use by including a 'firebaseUrl' query parameter.

commit 996e2a6a6a0993d5a88fc573426675190a152cb4
Author: Nathan Hadfield <hadfieldn@gmail.com>
Date:   Sat May 2 17:42:19 2015 -0600

    Change config params to camelCase, match Passport names

commit b0b2eab2d14ddea7956bd26efd313e1b67c53c2b
Author: Nathan Hadfield <hadfieldn@gmail.com>
Date:   Sat May 2 17:30:42 2015 -0600

    Fix security rules to allow token deletion by user with matching uid

    and to enable token writes only by an admin user.

commit 49cebcfe1df3da6d4a79ae419f81c8295300f043
Author: Nathan Hadfield <hadfieldn@gmail.com>
Date:   Sat May 2 08:01:10 2015 -0600

    Update minified firebase-passport-login.js

commit f51733a8157b6c06fa017024bd73fd9c41e65332
Author: Nathan Hadfield <hadfieldn@gmail.com>
Date:   Sat May 2 08:00:09 2015 -0600

    Move oAuthLogin and oAuthUsers to oAuth/login, oAuth/users

    and add Blaze formatted security rules

commit 27a8e42066635966d8e8f89a831c0b7c61fb8a17
Author: Nathan Hadfield <hadfieldn@gmail.com>
Date:   Thu Apr 30 16:57:48 2015 -0600

    Add twitter support

commit cfcb27266ab2fafd4542e11ec13f405448c43320
Author: Nathan Hadfield <hadfieldn@gmail.com>
Date:   Thu Apr 30 16:33:45 2015 -0600

    Add google auth

commit 69d6188ecffed1d48db27568032240230ccd7920
Author: Nathan Hadfield <hadfieldn@gmail.com>
Date: 

--- a/package.json
+++ b/package.json
@@ -1,37 +1,47 @@
 {
   "name": "firebase-passport-login",
-  "version": "0.0.0-70",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "body-parser": "^1.4.3",
-    "cookie-parser": "^1.3.2",
-    "es6-promise": "^1.0.0",
-    "express": "^4.5.1",
-    "express-session": "^1.6.4",
-    "firebase": "^1.0.17",
-    "firebase-token-generator": "~0.1.4",
-    "passport": "~0.1.18",
-    "passport-foursquare": "^1.0.0",
-    "passport-github": "^0.1.5",
-    "passport-linkedin": "^0.1.3",
-    "passport-reddit": "^0.2.4",
-    "passport-stack": "git://github.com/jessta/passport-stack.git",
-    "passport-trello": "^0.1.4"
-  },
-  "devDependencies": {
-    "firebase-token-generator": "~0.1.4",
-    "passport": "~0.1.18",
-    "passport-foursquare": "~0.1.3",
-    "express": "~3.4.8",
-    "passport-reddit": "~0.2.4",
-    "crypto": "0.0.3",
-    "firebase": "~1.0.2",
-    "underscore": "~1.5.2"
+  "version": "0.1.0",
+  "description": "Use Express Passport libraries with Firebase",
+  "main": "server/router.js",
+  "directories": {
+    "example": "examples"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "BSD"
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Rigidflame/firebase-passport-login.git"
+  },
+  "keywords": [
+    "firebase",
+    "passport",
+    "express"
+  ],
+  "author": "Abraham Haskins <abe@rigidflame.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Rigidflame/firebase-passport-login/issues"
+  },
+  "dependencies": {
+    "body-parser": "^1.12.3",
+    "commander": "^2.8.1",
+    "cookie-parser": "^1.3.4",
+    "crypto": "0.0.3",
+    "express": "~4.0.0",
+    "express-session": "^1.11.1",
+    "firebase": "~2.2.4",
+    "firebase-token-generator": "~2.0.0",
+    "lodash": "^3.7.0",
+    "passport": "~0.2.1",
+    "passport-facebook": "^2.0.0",
+    "passport-foursquare": "~0.1.3",
+    "passport-google-oauth": "^0.2.0",
+    "passport-reddit": "~0.2.4",
+    "passport-twitter": "^1.0.3",
+    "path": "^0.11.14",
+    "rsvp": "^3.0.18",
+    "underscore": "~1.5.2"
+  },
+  "devDependencies": {}
 }
