--- a/server/package.json
+++ b/server/package.json
@@ -1,31 +1,26 @@
 {
   "name": "firebase-passport",
-  "version": "0.0.0-70",
+  "version": "0.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "dependencies": {
-    "body-parser": "^1.4.3",
-    "cookie-parser": "^1.3.2",
-    "express": "^4.5.1",
-    "express-session": "^1.6.4",
-    "firebase": "^1.0.17",
-    "firebase-token-generator": "~0.1.4",
-    "passport": "~0.1.18",
-    "passport-foursquare": "^1.0.0",
-    "passport-github": "^0.1.5",
-    "passport-linkedin": "^0.1.3",
-    "passport-reddit": "^0.2.4",
-    "passport-trello": "^0.1.4"
+    "cookie-parser": "^1.3.4",
+    "firebase-token-generator": "~2.0.0",
+    "lodash": "^3.7.0",
+    "passport": "~0.2.1",
+    "passport-foursquare": "~0.1.3"
   },
   "devDependencies": {
-    "firebase-token-generator": "~0.1.4",
-    "passport": "~0.1.18",
+    "firebase-token-generator": "~2.0.0",
+    "passport": "~0.2.1",
     "passport-foursquare": "~0.1.3",
-    "express": "~3.4.8",
+    "express": "~4.0.0",
     "passport-reddit": "~0.2.4",
+    "passport-facebook": "^2.0.0",
     "crypto": "0.0.3",
-    "firebase": "~1.0.2",
-    "underscore": "~1.5.2"
+    "firebase": "~2.2.4",
+    "underscore": "~1.5.2",
+    "rsvp": "^3.0.16"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
