add firebase-element dependency

--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,9 @@
     "passport"
   ],
   "license": "MIT",
+  "dependencies": {
+    "firebase-element": "PolymerElements/firebase-element",
+  },
   "ignore": [
     "**/.*",
     "node_modules",
