Update location of firebase-element repository

--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "firebase-element": "PolymerElements/firebase-element",
+    "firebase-element": "GoogleWebComponents/firebase-element"
   },
   "ignore": [
     "**/.*",
