--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "firebase-token-generator": "~2.0.0",
     "lodash": "^3.7.0",
     "passport": "~0.2.1",
+    "passport-disqus": "^0.1.3",
     "passport-facebook": "^2.0.0",
     "passport-foursquare": "~0.1.3",
     "passport-google-oauth": "^0.2.0",
