use random tokens for auth session (not anonymous auth)
Establishing an anonymous auth connection take 3s or longer, during which time if the user selects a provider, the server may set the auth token before a listener can be established. Using a 35-char random session key instead should be sufficiently secure.

--- a/server/security-rules.json5
+++ b/server/security-rules.json5
@@ -47,8 +47,8 @@ schema:
 access:
   # Anonymous connections for OAuth can read & write their own entry only
   - location: oAuth/login/$uid/
-    read: $uid === auth.uid
-    write: $uid === auth.uid
+    read: true
+    write: true
 
   - location: oAuth/users/
 
