--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/babel-minify client/firebase-passport-login.js -o client/firebase-passport-login.min.js"
   },
   "repository": {
     "type": "git",
@@ -36,9 +37,9 @@
     "passport-disqus": "^0.1.3",
     "passport-facebook": "^2.0.0",
     "passport-google-oauth": "^0.2.0",
-    "passport-twitter": "^1.0.3",
-    "path": "^0.11.14",
-    "rsvp": "^3.0.18"
+    "passport-twitter": "^1.0.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-minify": "^0.5.0"
+  }
 }
