--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "url": "https://github.com/Rigidflame/firebase-passport-login/issues"
   },
   "dependencies": {
+    "@firebase/app-types": "0.x",
     "body-parser": "^1.12.3",
     "commander": "^2.8.1",
     "cookie-parser": "^1.3.4",
